# AI-Yinsh-v1

./: .gitignore  Agent.cpp  Agent.h  Board.cpp  Board.h  Board1.cpp  CMakeLists.txt  README.md  code  compile.sh  main.cpp  run.sh  test  test.cpp
